--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -2222,3 +2222,29 @@ ul.navbar-nav {
         display: none; /* Hide the nav bar on larger screens */
     }
 }
+
+
+
+
+
+/* Begin CSS for home page search bar (project search bar) */
+.project-container {
+    width: 100%; /* Ensures it spans the parent container */
+    max-width: 800px; /* Adjust this width to match the container width of your project list */
+    margin: 0 auto; /* Centers it horizontally */
+}
+
+.project-search-bar {
+    width: 100%; /* Make it span the width of the container */
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box; /* Ensures padding doesn't exceed container width */
+}
+
+.unique-project-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+/* End CSS for home page search bar (project search bar) */
