--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -17,7 +17,7 @@
  :               `-.__             __.-'              :
  :                  ) ""---...---"" (                 :
   '._               `"--...___...--"`              _.'
-jgs \""--..__                              __..--""/
+    \""--..__                              __..--""/
      '._     """----.....______.....----"""     _.'
         `""--..,,_____            _____,,..--""`
                       `"""----"""`  
