--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{ csrf_token }}">
 
-    <title>DevLink - {% block title %}Home{% endblock %}</title>
+    <title class="main-hedder">DevLink - {% block title %}Home{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="icon" href="/static/projects/images/logo.png" type="image/x-icon">
     <link rel="manifest" href="{% static 'manifest.json' %}">
