--- a/projects/templates/projects/login.html
+++ b/projects/templates/projects/login.html
@@ -19,7 +19,7 @@
         </div>
         <button type="submit" class="btn">Login</button>
     </form>
-    <p>Don't have an account? <a href="{% url 'register' %}">Sign up here</a></p>
+    <p class="login-page">Don't have an account? <a href="{% url 'register' %}">Sign up here</a></p>
     <div id="g_id_onload"
     data-client_id="663080728605-j3gkpo8r4rggg0fi7b209bkm1slqet1p.apps.googleusercontent.com"
     data-context="signin"
