--- a/staticfiles/projects/styles.css
+++ b/staticfiles/projects/styles.css
@@ -1517,6 +1517,10 @@ textarea {
     border-radius: 4px; /* Soften border radius */
 }
 
+.login-page {
+    color: white!important; 
+}
+
 /* Right: Chat Container */
 .chat-container {
     flex: 3;
