--- a/projects/templates/projects/login.html
+++ b/projects/templates/projects/login.html
@@ -23,7 +23,7 @@
     <div id="g_id_onload"
     data-client_id="663080728605-j3gkpo8r4rggg0fi7b209bkm1slqet1p.apps.googleusercontent.com"
     data-context="signin"
-    data-ux_mode="popup"
+    data-ux_mode="redirect"
     data-login_uri="https://devlink.up.railway.app/accounts/google/login/callback/"
     data-itp_support="true">
 </div>
