--- a/projects/templates/projects/login.html
+++ b/projects/templates/projects/login.html
@@ -20,21 +20,10 @@
         <button type="submit" class="btn">Login</button>
     </form>
     <p class="login-page">Don't have an account? <a href="{% url 'register' %}">Sign up here</a></p>
-    <div id="g_id_onload"
-    data-client_id="663080728605-j3gkpo8r4rggg0fi7b209bkm1slqet1p.apps.googleusercontent.com"
-    data-context="signin"
-    data-ux_mode="redirect"
-    data-login_uri="https://devlink.up.railway.app/accounts/google/login/callback/"
-    data-itp_support="true">
-</div>
+<!-- Sign-In Button with Google's Styling -->
+<a href="{% provider_login_url 'google' %}" class="google-signin-btn">
+    <span class="google-logo"></span> Sign in with Google
+</a>
 
-<div class="g_id_signin"
-    data-type="standard"
-    data-shape="pill"
-    data-theme="outline"
-    data-text="signin_with"
-    data-size="large"
-    data-logo_alignment="left">
-</div>
 </div>
 {% endblock %}
