--- a/projects/templates/socialaccount/login.html
+++ b/projects/templates/socialaccount/login.html
@@ -3,6 +3,7 @@
 {% load socialaccount %}
 
 {% block title %}Sign In Via Google{% endblock %}
+{% block header %}{% endblock %}
 
 {% block content %}
 <div class="google-signin-container">
@@ -20,3 +21,4 @@
     </div>
 </div>
 {% endblock %}
+{% block footer %}{% endblock %}
