--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -116,7 +116,7 @@
                     </div>
                 {% else %}
                 <div class="button-container">
-                    <a href="{% url 'login' %}" class="btn">Login</a>
+                    <a href="{% url 'account_login' %}" class="btn">Login</a>
                     <a href="{% url 'register' %}" class="btn">Sign Up</a>
                 </div>
                 {% endif %}
