--- a/projects/templates/account/login.html
+++ b/projects/templates/account/login.html
@@ -1,6 +1,8 @@
 {% extends "projects/base.html" %}
 {% load static %}
 {% load socialaccount %}
+<link rel="stylesheet" href="{% static 'projects/styles.css' %}">
+
 
 {% block title %}Login{% endblock %}
 
